<resources>
    <string name="app_name">Syriana</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="nav_all_courses">All Courses</string>
    <string name="nav_my_courses">My Courses</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="center">center</string>
    <string name="name">Full name</string>
    <string name="email">Email address</string>
    <string name="year">Year</string>
    <string name="notification_permission_rationale">This app requires notifications permissions to alert you whenever a new video is uploaded.</string>
    <string name="record_audio_permission_rationale">This app requires audio recording permissions to prevent screen recording.</string>
    <string name="request_code">Request Code</string>
    <string name="request_code_prompt">Please enter your request code:</string>
    <string name="request_code_hint">The request code can be found on the back of your card.</string>
    <string name="no_notifications">You have no new notifications at this time.</string>
    <string name="enter_phone_number">Please enter your phone number.</string>
    <string name="cancel">Cancel</string>
    <string name="verification_code">Verification Code</string>
    <string name="verification_code_prompt">Please enter your verification code to continue.</string>
    <string name="no_internet">No internet connection</string>
    <string name="no_internet_prompt">Failed to connect to Syriana. Please check your internet connection and try again.</string>
    <string name="try_again">Try again</string>

    <string name="default_notification_channel_id">Default</string>

</resources>