<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/all_courses_menu_item"
        android:enabled="true"
        android:icon="@drawable/home_icon"
        android:title="@string/nav_all_courses"/>
    <item
        android:id="@+id/my_courses_menu_item"
        android:enabled="true"
        android:icon="@drawable/profile_icon"
        android:title="@string/nav_my_courses"/>

    <item
        android:id="@+id/notifications_menu_item"
        android:enabled="true"
        android:icon="@drawable/bell_icon"
        android:title="@string/nav_notifications"/>

    <item
        android:id="@+id/settings_menu_item"
        android:enabled="true"
        android:icon="@drawable/settings_icon"
        android:title="@string/nav_settings"/>
</menu>