<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".PasswordsActivity">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/kaushan_script"
        android:text="@string/app_name"
        android:textColor="@color/themeColor"
        android:textSize="64sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-24dp"
        android:fontFamily="@font/kaushan_script"
        android:text="@string/center"
        android:textColor="@color/themeColor"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <androidx.cardview.widget.CardView
        android:id="@+id/passwordsCardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/themeColor"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7"
        app:layout_constraintWidth_percent="0.85" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newPasswordTextFieldLayout"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:elevation="10dp"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:foregroundGravity="center"
        android:hint="@string/password"
        android:textColorHint="@color/black"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:endIconCheckable="true"
        app:endIconMode="password_toggle"
        app:endIconTint="#939393"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/passwordsCardView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/white_round_corner_background"
            android:fontFamily="@font/glegoo"
            android:gravity="center"
            android:inputType="textPassword"
            android:textColor="#000000"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmNewPasswordTextFieldLayout"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:elevation="10dp"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:foregroundGravity="center"
        android:hint="@string/confirm_password"
        android:textColorHint="@color/black"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:endIconCheckable="true"
        app:endIconMode="password_toggle"
        app:endIconTint="#939393"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newPasswordTextFieldLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmNewPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/white_round_corner_background"
            android:fontFamily="@font/glegoo"
            android:gravity="center"
            android:inputType="textPassword"
            android:textColor="#000000"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/signupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/white_round_corner_background"
        android:elevation="10dp"
        android:padding="12dp"
        android:text="@string/signup"
        android:textColor="@color/themeColor"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="@+id/passwordsCardView"
        app:layout_constraintStart_toStartOf="@+id/passwordsCardView"
        app:layout_constraintTop_toBottomOf="@+id/confirmNewPasswordTextFieldLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>