<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".RequestCodeActivity">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/kaushan_script"
        android:text="@string/app_name"
        android:textColor="@color/themeColor"
        android:textSize="64sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-24dp"
        android:fontFamily="@font/kaushan_script"
        android:text="@string/center"
        android:textColor="@color/themeColor"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:text="@string/request_code_prompt"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:fontFamily="@font/glegoo"
        app:layout_constraintBottom_toTopOf="@+id/requestCodeCardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/white_round_corner_background"
        android:elevation="10dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="?"
        android:textStyle="bold"
        android:textColor="@color/themeColor"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/requestCodeCardView"
        app:layout_constraintTop_toBottomOf="@+id/requestCodeTextFieldLayout" />

    <androidx.cardview.widget.CardView
        android:id="@+id/requestCodeCardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/themeColor"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7"
        app:layout_constraintWidth_percent="0.85" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/requestCodeTextFieldLayout"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="16dp"
        android:elevation="10dp"
        android:foregroundGravity="center"
        android:hint="@string/request_code"
        android:textColorHint="@color/black"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="@id/requestCodeCardView"
        app:layout_constraintStart_toStartOf="@id/requestCodeCardView"
        app:layout_constraintTop_toTopOf="@id/requestCodeCardView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/requestCodeEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/white_round_corner_background"
            android:fontFamily="@font/glegoo"
            android:gravity="center"
            android:inputType="text"
            android:textColor="@color/black"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="-8dp"
        android:elevation="10dp"
        android:padding="8dp"
        android:gravity="center"
        android:text="@string/request_code_hint"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/requestCodeCardView"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/requestCodeTextFieldLayout" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/white_round_corner_background"
        android:elevation="10dp"
        android:padding="12dp"
        android:text="Continue"
        android:textColor="@color/themeColor"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="@+id/requestCodeCardView"
        app:layout_constraintStart_toStartOf="@+id/requestCodeCardView"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

</androidx.constraintlayout.widget.ConstraintLayout>