<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".ForgotPasswordActivity">

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/kaushan_script"
        android:text="@string/app_name"
        android:textColor="@color/themeColor"
        android:textSize="64sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-24dp"
        android:fontFamily="@font/kaushan_script"
        android:text="@string/center"
        android:textColor="@color/themeColor"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <androidx.cardview.widget.CardView
        android:id="@+id/forgotPasswordCardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/themeColor"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7"
        app:layout_constraintWidth_percent="0.85" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/forgotPassword_phoneNumberTextFieldLayout"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="48dp"
        android:elevation="10dp"
        android:foregroundGravity="center"
        android:hint="@string/phone_number"
        android:textColorHint="@color/black"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="@id/forgotPasswordCardView"
        app:layout_constraintStart_toStartOf="@id/forgotPasswordCardView"
        app:layout_constraintTop_toBottomOf="@id/textView11">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/forgotPassword_phoneNumberEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/white_round_corner_background"
            android:fontFamily="@font/glegoo"
            android:gravity="center"
            android:inputType="number"
            android:textColor="@color/black"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:elevation="10dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/enter_phone_number"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/forgotPasswordCardView"
        app:layout_constraintEnd_toEndOf="@+id/forgotPasswordCardView"
        app:layout_constraintTop_toTopOf="@+id/forgotPasswordCardView" />

    <Button
        android:id="@+id/forgotPassword_continueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/white_round_corner_background"
        android:elevation="10dp"
        android:padding="12dp"
        android:text="Continue"
        android:textColor="@color/themeColor"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="@+id/forgotPasswordCardView"
        app:layout_constraintStart_toStartOf="@+id/forgotPasswordCardView"
        app:layout_constraintTop_toBottomOf="@+id/forgotPassword_phoneNumberTextFieldLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>