<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white">

    <com.fraggjkee.smsconfirmationview.SmsConfirmationView
        android:id="@+id/verificationCodeDialog_verificationCodeEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="12dp"
        android:paddingTop="12dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:scv_codeLength="6"
        app:scv_symbolBackgroundColor="@color/white"
        app:scv_symbolBorderColor="@color/themeColor"
        app:scv_symbolTextColor="@color/themeColor"
        app:scv_smsDetectionMode="auto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verificationCodeDialog_verificationCodeEditText">

        <Button
            android:id="@+id/verificationCodeDialog_cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/white_round_corner_background"
            android:text="@string/cancel"
            android:padding="12dp"
            android:textColor="#FF0000"
            app:backgroundTint="@null"
            tools:ignore="UnusedAttribute" />

        <Space
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            tools:ignore="InefficientWeight" />

        <Button
            android:id="@+id/verificationCodeDialog_continueButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/white_round_corner_background"
            app:backgroundTint="@null"
            android:padding="12dp"
            android:text="Continue"
            android:textColor="@color/themeColor"
            tools:ignore="UnusedAttribute" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/glegoo_bold"
        android:text="@string/verification_code"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/glegoo"
        android:gravity="center"
        android:textColor="@color/black"
        android:text="@string/verification_code_prompt"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

</androidx.constraintlayout.widget.ConstraintLayout>